--- a/src/Cecs475.BoardGames.Chess.Model/Cecs475.BoardGames.Chess.Model.csproj
+++ b/src/Cecs475.BoardGames.Chess.Model/Cecs475.BoardGames.Chess.Model.csproj
@@ -4,8 +4,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile></DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Cecs475.BoardGames.Model\Cecs475.BoardGames.Model.csproj" />
+    <ProjectReference Include="..\Cecs475.BoardGames.View\Cecs475.BoardGames.View.csproj" />
   </ItemGroup>
 
 </Project>
