--- a/src/Cecs475.BoardGames.Chess.WpfView/Cecs475.BoardGames.Chess.WpfView.csproj
+++ b/src/Cecs475.BoardGames.Chess.WpfView/Cecs475.BoardGames.Chess.WpfView.csproj
@@ -97,8 +97,20 @@
       <Name>Cecs475.BoardGames.WpfView</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <Resource Include="Resources\blackBishop.png" />
+    <Resource Include="Resources\blackKing.png" />
+    <Resource Include="Resources\blackKnight.png" />
+    <Resource Include="Resources\blackPawn.png" />
+    <Resource Include="Resources\blackQueen.png" />
+    <Resource Include="Resources\blackRook.png" />
+    <Resource Include="Resources\whiteBishop.png" />
+    <Resource Include="Resources\whiteKing.png" />
+    <Resource Include="Resources\whiteKnight.png" />
+    <Resource Include="Resources\whitePawn.png" />
+    <Resource Include="Resources\whiteQueen.png" />
+    <Resource Include="Resources\whiteRook.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
