--- a/src/Cecs475.BoardGames.Chess.WpfView/Cecs475.BoardGames.Chess.WpfView.csproj
+++ b/src/Cecs475.BoardGames.Chess.WpfView/Cecs475.BoardGames.Chess.WpfView.csproj
@@ -34,6 +34,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -48,6 +50,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="ChessPromotionView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ChessView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -55,6 +61,9 @@
     <Compile Include="ChessBackgroundConverter.cs" />
     <Compile Include="ChessGameFactory.cs" />
     <Compile Include="ChessImageConverter.cs" />
+    <Compile Include="ChessPromotionView.xaml.cs">
+      <DependentUpon>ChessPromotionView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ChessView.xaml.cs">
       <DependentUpon>ChessView.xaml</DependentUpon>
     </Compile>
