reference to opponent added to wpfapp

--- a/src/Cecs475.BoardGames.WpfApp/Cecs475.BoardGames.WpfApp.csproj
+++ b/src/Cecs475.BoardGames.WpfApp/Cecs475.BoardGames.WpfApp.csproj
@@ -99,6 +99,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Cecs475.BoardGames.ComputerOpponent\Cecs475.BoardGames.ComputerOpponent.csproj">
+      <Project>{7030eb6a-75c7-4126-b03c-0c1895b3e2db}</Project>
+      <Name>Cecs475.BoardGames.ComputerOpponent</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Cecs475.BoardGames.Model\Cecs475.BoardGames.Model.csproj">
       <Project>{ad3670ac-f179-44fd-b2c4-2bf0c6819355}</Project>
       <Name>Cecs475.BoardGames.Model</Name>
