--- a/src/Cecs475.BoardGames.WpfApp/Cecs475.BoardGames.WpfApp.csproj
+++ b/src/Cecs475.BoardGames.WpfApp/Cecs475.BoardGames.WpfApp.csproj
@@ -99,8 +99,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Cecs475.BoardGames.ComputerOpponent\Cecs475.BoardGames.ComputerOpponent.csproj">
-      <Project>{7030eb6a-75c7-4126-b03c-0c1895b3e2db}</Project>
+    <ProjectReference Include="..\Cecs475.BoardGames.ComputerOpponent\Cecs475.BoardGames.ComputerOpponent.csproj">
+      <Project>{6e435e0b-9d30-4405-9c30-f58412895583}</Project>
       <Name>Cecs475.BoardGames.ComputerOpponent</Name>
     </ProjectReference>
     <ProjectReference Include="..\Cecs475.BoardGames.Model\Cecs475.BoardGames.Model.csproj">
