CHESS AI REALLY SLOW.

--- a/src/Cecs475.BoardGames.Chess.Model/Cecs475.BoardGames.Chess.Model.csproj
+++ b/src/Cecs475.BoardGames.Chess.Model/Cecs475.BoardGames.Chess.Model.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Cecs475.BoardGames.ComputerOpponent\Cecs475.BoardGames.ComputerOpponent.csproj" />
     <ProjectReference Include="..\Cecs475.BoardGames.Model\Cecs475.BoardGames.Model.csproj" />
     <ProjectReference Include="..\Cecs475.BoardGames.View\Cecs475.BoardGames.View.csproj" />
   </ItemGroup>
