--- a/src/Cecs475.BoardGames.Othello.WpfView/Cecs475.BoardGames.Othello.WpfView.csproj
+++ b/src/Cecs475.BoardGames.Othello.WpfView/Cecs475.BoardGames.Othello.WpfView.csproj
@@ -86,6 +86,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Cecs475.BoardGames.ComputerOpponent\Cecs475.BoardGames.ComputerOpponent.csproj">
+      <Project>{6E435E0B-9D30-4405-9C30-F58412895583}</Project>
+      <Name>Cecs475.BoardGames.ComputerOpponent</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Cecs475.BoardGames.Model\Cecs475.BoardGames.Model.csproj">
       <Project>{ad3670ac-f179-44fd-b2c4-2bf0c6819355}</Project>
       <Name>Cecs475.BoardGames.Model</Name>
