--- a/src/Cecs475.BoardGames.Chess.WpfView/Cecs475.BoardGames.Chess.WpfView.csproj
+++ b/src/Cecs475.BoardGames.Chess.WpfView/Cecs475.BoardGames.Chess.WpfView.csproj
@@ -100,9 +100,17 @@
       <Project>{16a691e8-d370-4cab-a02c-1bbbfdf19dd4}</Project>
       <Name>Cecs475.BoardGames.Chess.Model</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Cecs475.BoardGames.ComputerOpponent\Cecs475.BoardGames.ComputerOpponent.csproj">
+      <Project>{6e435e0b-9d30-4405-9c30-f58412895583}</Project>
+      <Name>Cecs475.BoardGames.ComputerOpponent</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Cecs475.BoardGames.Model\Cecs475.BoardGames.Model.csproj">
       <Project>{ad3670ac-f179-44fd-b2c4-2bf0c6819355}</Project>
       <Name>Cecs475.BoardGames.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Cecs475.BoardGames.WpfApp\Cecs475.BoardGames.WpfApp.csproj">
+      <Project>{f7f71675-12a1-49da-ad59-13e4bbb1f7a4}</Project>
+      <Name>Cecs475.BoardGames.WpfApp</Name>
     </ProjectReference>
     <ProjectReference Include="..\Cecs475.BoardGames.WpfView\Cecs475.BoardGames.WpfView.csproj">
       <Project>{2df47748-ad85-4ed5-8b57-729bed253f66}</Project>
