--- a/src/Cecs475.BoardGames.TicTacToe.WpfView/Cecs475.BoardGames.TicTacToe.WpfView.csproj
+++ b/src/Cecs475.BoardGames.TicTacToe.WpfView/Cecs475.BoardGames.TicTacToe.WpfView.csproj
@@ -55,6 +55,10 @@
     <Compile Include="TicTacToeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Cecs475.BoardGames.ComputerOpponent\Cecs475.BoardGames.ComputerOpponent.csproj">
+      <Project>{6E435E0B-9D30-4405-9C30-F58412895583}</Project>
+      <Name>Cecs475.BoardGames.ComputerOpponent</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Cecs475.BoardGames.Model\Cecs475.BoardGames.Model.csproj">
       <Project>{E30836FA-92E0-4787-9237-DC750C339FB9}</Project>
       <Name>Cecs475.BoardGames.Model</Name>
