--- a/src/Cecs475.BoardGames.Chess.View/Cecs475.BoardGames.Chess.View.csproj
+++ b/src/Cecs475.BoardGames.Chess.View/Cecs475.BoardGames.Chess.View.csproj
@@ -1,8 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>8.0</LangVersion>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>Cecs475.BoardGames.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
