--- a/src/Cecs475.BoardGames.Chess.View/Cecs475.BoardGames.Chess.View.csproj
+++ b/src/Cecs475.BoardGames.Chess.View/Cecs475.BoardGames.Chess.View.csproj
@@ -5,6 +5,7 @@
     <LangVersion>8.0</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Cecs475.BoardGames.snk</AssemblyOriginatorKeyFile>
+    <DelaySign>false</DelaySign>
   </PropertyGroup>
 
   <ItemGroup>
