--- a/src/Cecs475.BoardGames.Chess.WpfView/Cecs475.BoardGames.Chess.WpfView.csproj
+++ b/src/Cecs475.BoardGames.Chess.WpfView/Cecs475.BoardGames.Chess.WpfView.csproj
@@ -37,6 +37,9 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>Cecs475.BoardGames.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+  <PropertyGroup>
+    <DelaySign>false</DelaySign>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
